# audio-capturex

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/: audio_capture.hpp
src/: audio_capture.cpp  main.cpp
